# fastsci

./: README.md  ROADMAP.md  build.bat  build.ps1  build.sh  pyproject.toml  repyconfig.toml  requirements.txt  runtests.repy  setup.py
src/fastsci/: __init__.py
src/fastsci/base/: array.py
src/fastsci/bindings/: bindings.h  converters.c  fastscimodule.cpp  fastscimodule.cxx
src/fastsci/core/: __init__.py  core.h
src/fastsci/core/arrays/: add.c  bindings.cc  bindings.hpp  main.h  sources.txt
src/fastsci/core/fft/: bindings.cc  fft.c  fft.cpp
src/fastsci/core/matrix/: bindings.cc  bindings.hpp  main.h  matmul.c  scalar.c  sources.txt
src/fastsci/core/stats/: bindings.cc  bindings.hpp  main.h  sources.txt  stats.c
src/fastsci/core/transforms/: bindings.cc  bindings.hpp  fft.c  main.h  sources.txt
src/fastsci/include/: fastsci.h
tests/test_base/: test_array.repy
tests/test_core/: test_fft.repy  test_matmul.repy  test_mean.py  test_mean.repy  test_stddev.repy  test_transforms.repy
